# toy

./: README  README.md
JavaSender/: README  build.xml
OOo_7/: README  autogo.py  tt.oxt
SchoolMap/: CMakeLists.txt  Makefile  README.md  mingw32.cmake
SchoolMap/src/map_editer/: CMakeLists.txt  canvas.cpp  canvas.h  gui.cpp  gui.fbp  gui.h  main.cpp  main.h  my_data.cpp  my_data.h
active_skype/: README.md  active_skype
c51tetris/: Last Loaded lcd.DBK  README.md  lcd.PWI  lcd.dsn
classmanager/: Gemfile  README.md  Rakefile  config.ru
colorDetector/: CMakeLists.txt  colorDetector
colorDetector/src/: ColorDetectframe.cpp  ColorDetectframe.h  Control.cpp  Control.hpp  MainFrame.cpp  MainFrame.h  Model.cpp  Model.hpp  colorDetect.fbp  main.cpp
database/: 1.pl  2_create.sql  2_revoke.sql  3.sql  4_esql  4_esql.pgc  5_odbc.c  Makefile  README  init.sql  odbc.ini
diskseek/: 磁盘寻道算法演示.html
draw_words/: Makefile  README  README.md  gend.c
google_speaker/: README  google_speak
hack3366/: 1000065_swfdata.js  README.md  a.pl  algorithm  comm_swfdata.js  result.html
led_matirx/: Makefile  README.md  callback.c  callback.h  drawwindow.c  gtkmatrixled.c  gtkmatrixled.h  gtkrc  interface.c  interface.h  main.c  snyh
llk/: README.md  index.html
mvim/: README.md  mvim
pl/: client.cpp  client_request.cpp  db.cpp  makefile  msg.h  server.cpp
smtp/: CMakeLists.txt  README.md  base64.hpp  libamail.cpp  libamail.hpp  test.cpp
war3/: README.md  lpwar3.cpp  pre.h
webqq_paste_img/: hack.js  manifest.json  new.js  paste_img.js  webqq_paste_img.crx
yacc/: a.l  (+4 more)
(+94 files in other folders)
